@@ -1,0 +1,3 @@
+\documentclass[14pt]{article}
+\pagestyle{empty}
+\begin{document}
